# MicroFMU-library

./: .buildinfo  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  about.html  changeCode.sh  explanations.html  genindex.html  how_to_guides.html  index.html  micropython.cmake  micropython.mk  objects.inv  parseFMU.sh  reference.html  search.html  searchindex.js  tutorials.html
.doctrees/: about.doctree  environment.pickle  explanations.doctree  how_to_guides.doctree  index.doctree  reference.doctree  tutorials.doctree
.doctrees/explanations/: challenges.doctree  design_choices.doctree  evaluation.doctree  workflow.doctree
.doctrees/how_to_guides/: build_esp32.doctree  build_unix.doctree  integrating_fmu.doctree
.doctrees/reference/: ufmu.doctree
.doctrees/tutorials/: getting_started.doctree
.github/workflows/: build-docs.yml  unix-tests.yml
_sources/: how_to_guides.rst.txt
_sources/explanations/: design_choices.rst.txt
docs/: Makefile  about.rst  conf.py  explanations.rst  index.rst  reference.rst  tutorials.rst
docs/explanations/: challenges.rst  evaluation.rst  reference.html  workflow.rst
docs/how_to_guides/: build_esp32.rst  build_unix.rst  integrating_fmu.rst
docs/reference/: ufmu.rst
docs/tutorials/: getting_started.rst
explanations/: challenges.html  design_choices.html  evaluation.html  workflow.html
how_to_guides/: build_esp32.html  build_unix.html  integrating_fmu.html
reference/: ufmu.html
tests/: test_unix.py
tutorials/: getting_started.html
